# octar

./: .gitignore  AGENTS.MD  README.md  pyproject.toml
octar/: .gitignore  pyproject.toml  pytest.ini
octar-ui/: index.html  package-lock.json  package.json  test.html  vite.config.ts
octar-ui/src/: main.ts  style.css  vite-env.d.ts
octar-ui/src/ctx/foundation/: base.ts  core.ts  index.ts
octar-ui/src/types/: globals.d.ts
octar/src/octar/: __init__.py  base.py  core.py  environment.py  runtime.py  stash.py  utils.py
octar/src/octar/temporal/: core.py  utils.py  workflow.py
octar/tests/: test_octar.py
octar/tests/temporal/: _utils.py  conftest.py  test_basic_event_processing.py  test_nondeterminism_recovery.py
src/octar/: __init__.py  utils.py
tests/: test_octar.py
